added transition for gradient

--- a/index.html
+++ b/index.html
@@ -18,31 +18,38 @@
           nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
         <div class="main-cards">
           <div class="main-card card-1">
+            <div class="card-grad">
+              <div class="card-text">
+                <h3 class="card-title">Green Smoothies: Too Much of a Good Thing?</h3>
+                <span class="card-info">By Auskteez - 2 hours ago</span>
+              </div>
+            </div>
             <p class="card-date">
               <span class="num">20</span> nov
             </p>
-            <div class="card-text">
-              <h3 class="card-title">Green Smoothies: Too Much of a Good Thing?</h3>
-              <span class="card-info">By Auskteez - 2 hours ago</span>
-            </div>
+            
           </div>
           <div class="main-card card-2">
+            <div class="card-grad">
+              <div class="card-text">
+                <h3 class="card-title">Growing Food and a “Thirst” for Innovation</h3>
+                <span class="card-info">By Auskteez - 3 hours ago</span>
+              </div>
+            </div>
             <p class="card-date">
               <span class="num">14</span> nov
             </p>
-            <div class="card-text">
-              <h3 class="card-title">Growing Food and a “Thirst” for Innovation</h3>
-              <span class="card-info">By Auskteez - 3 hours ago</span>
-            </div>
           </div>
           <div class="main-card card-3">
+            <div class="card-grad">
+              <div class="card-text">
+                <h3 class="card-title">Pesticides & Food: What You Need to Know</h3>
+                <span class="card-info">By Auskteez - 6 hours ago</span>
+              </div>
+            </div>
             <p class="card-date">
               <span class="num">10</span> nov
             </p>
-            <div class="card-text">
-              <h3 class="card-title">Pesticides & Food: What You Need to Know</h3>
-              <span class="card-info">By Auskteez - 6 hours ago</span>
-            </div>
           </div>
         </div>
         <a href="#" class="more">view more</a>
